# vpc-score-plugin

./: .gitmodules  CMakeLists.txt  README.md  plugin.cfg
.github/workflows/: build.yml
plugins/vpc-score-plugin/: plugin.cfg  vpc-score-plugin.cpp
plugins/vpc-score-plugin/include/: vpc-score-plugin.cpp
plugins/vpc-score-plugin/include/plugins/: ControllerPlugin.h  LoggingPlugin.h  MsgPlugin.h  VPXPlugin.h
